kubernetes/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask
  labels:
    app.kubernetes.io/name: flask
    app.kubernetes.io/part-of: secure-eks-platform
