kubernetes/05_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: flask
spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask

    spec:
      containers:
        - name: flask

          image: 310454703862.dkr.ecr.ap-south-1.amazonaws.com/secure-eks-platform:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi
