kubernetes/06_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask
  namespace: flask

  labels:
    app: flask

spec:
  type: ClusterIP

  selector:
    app: flask

  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
